# papermind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: settings.yaml
data/: BENCHMARKS.md  benchmark_report.json  vector_benchmark_results.json
docker/: Dockerfile.grobid  Dockerfile.sandbox
src/papermind/: __init__.py  cli.py  config.py  models.py  services.py
src/papermind/api/: app.py  dependencies.py
src/papermind/api/routes/: chat.py  health.py  papers.py  search.py
src/papermind/benchmarks/: faiss_benchmark.py
src/papermind/infrastructure/: embedding.py  faiss_store.py  knowledge_graph.py  llm_client.py  local_model.py  paper_store.py  vector_store.py
src/papermind/ingestion/: chunker.py  embedder.py  entity_extractor.py  grobid_parser.py  hybrid_parser.py  latex_extractor.py  mineru_parser.py  pdf_parser.py
src/papermind/rag/: __init__.py  context.py  pipeline.py  reranker.py  retriever.py
src/papermind/reasoning/: __init__.py  cot.py  react.py  self_consistency.py
src/papermind/ui/: app.py  shared.py
src/papermind/ui/pages/: benchmarks.py  chat.py  dataset.py  papers.py  search.py  system.py
tests/: conftest.py  test_api.py  test_chunker.py  test_config.py  test_embedding.py  test_entity_extractor.py  test_knowledge_graph.py  test_latex_extractor.py  test_models.py  test_paper_store.py  test_pdf_parser.py  test_rag_context.py  test_rag_reranker.py  test_rag_retriever.py  test_reasoning.py  test_services.py  test_vector_store.py
